jupyterhub/kubernetes/jld-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jld
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: jld
    spec:
      containers:

        - name: jld
          imagePullPolicy: "Always"
          image: "lsstsqre/jld-hub"
          ports:
            -
              containerPort: 8000
              name: jld
