jupyterhub/kubernetes/jld-hub-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jld-hub
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: jld-hub
    spec:
      containers:
        - name: jld-hub
          imagePullPolicy: "Always"
          image: "lsstsqre/jld-hub"
          ports:
            -
              containerPort: 8000
              name: jld-hub
          volumeMounts:
            - name: jld-fileserver-home
              mountPath: /home
            - name: jld-hub-config
              mountPath: /opt/lsst/software/jupyterhub/config
      volumes:
        - name: jld-fileserver-home
          persistentVolumeClaim:
             claimName: jld-fileserver-home
        - name: jld-hub-config
          configMap:
            name: jld-hub-config
            #  Create with `kubectl create configmap jld-hub-config \
            #   --from-file=config/jld-hub-cfg.py`
            items:
            - key: jld-hub-cfg.py
              path: jupyterhub_config.py
