jupyterhub/kubernetes/jld-hub-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jld-hub
  labels:
    name: jld-hub
spec:
  type: NodePort
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  - name: api
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    name: jld-hub
