jupyterhub/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hub
  labels:
    name: hub
spec:
  type: NodePort
  ports:
  - name: api
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    name: hub
